--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -8,6 +8,10 @@
       #news {
       }
     }
+    img{
+      width: 30px;
+      height: 35px;
+    }
   }
 }
 
@@ -20,7 +24,7 @@
     background: #333333;
     align-items: center;
     display: flex;
-    height: 77px;
+    height: 65px;
     .container {
       width: 98%;
       margin: 0 auto;
