--- a/assets/scss/layout/_spaces.scss
+++ b/assets/scss/layout/_spaces.scss
@@ -9,8 +9,9 @@
   .subTitle {
     @extend .title;
     z-index: 5;
-    display: block;
+    justify-content: center;
     margin: 0 auto;
+
   }
   .section_title {
     @extend .section_title_style;
