--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -58,6 +58,9 @@
           font-weight: bold;
           margin-bottom: 16px;
         }
+        li{
+          margin-left: 20px;
+        }
       }
     }
   }
