--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -13,9 +13,10 @@
 @import "/layout/cofunders";
 @import "/layout/rooms";
 @import "/layout/about";
+@import "/layout/footer";
+
 
 *{
   margin: 0;
   padding: 0;
 }
-
