--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -61,6 +61,10 @@
         li{
           margin-left: 20px;
         }
+        a{
+          text-decoration: none;
+          color: $title;
+        }
       }
     }
   }
