--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -202,3 +202,23 @@ body {
     margin-bottom:200px;
   }
 }
+.back{
+    font-family: $text-font;
+    text-transform: uppercase;
+    font-size: 18px;
+    margin-bottom: 100px;
+    display: flex;
+    margin-left: 20px;
+
+  img{
+    width: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 20px;
+  }
+  a{
+   text-decoration: none;
+   color: #4f4f4f;
+   margin-top: -5px;
+  }
+}
