--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -10,8 +10,11 @@
   font-size: 30px;
   width: 100%;
   margin-bottom: 50px;
+
+
   video {
     display: none;
+
   }
   .content {
     width: 100%;
@@ -36,7 +39,7 @@
     }
     display: block;
     position: relative;
-    height: 80vh;
+    height: 100vh;
     overflow: hidden;
     -webkit-background-size: cover;
     background-size: cover;
@@ -50,14 +53,16 @@
       background: white;
       flex-direction: row;
       max-width: 800px;
-      height: 388px;
+      height: 320px;
       opacity: 0.9;
       h1 {
         margin-left: 40px;
         max-width: 553px;
+        margin-top: 30px;
       }
       img {
         transform: rotate(0);
+        margin-top: 50px;
       }
     }
   }
