--- a/assets/scss/layout/_rooms.scss
+++ b/assets/scss/layout/_rooms.scss
@@ -1,6 +1,5 @@
 @import "../modules/variables";
 @import "../base/base";
-
 .rooms {
   position: relative;
   font-family: $text-font;
@@ -11,25 +10,19 @@
   .room_box {
     display: none;
   }
-
-  .green_overlay{
-    background-color:$title;
+  .green_overlay {
+    display: none;
+    background-color: $title;
     height: 100%;
-    width:100%;
+    width: 100%;
     position: absolute;
-    
   }
   .img_container_room {
     height: 100%;
- 
-  
-    
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-     
-      
     }
   }
 }
@@ -42,6 +35,7 @@
       width: 100%;
       height: 100vh;
       .left {
+        display: block;
         position: relative;
         width: 40%;
         .description {
@@ -55,15 +49,10 @@
             font-size: $text-font;
             max-width: 360px;
             overflow: hidden;
-           
-            .float{
+            .float {
               min-width: 400px;
-              
-             
             }
           }
-
-
           .btn {
             margin-left: 75px;
             margin-top: 42px;
@@ -100,7 +89,7 @@
         width: 60%;
         position: relative;
         overflow: hidden;
-        background-color:$purple;
+        background-color: $purple;
         .shaddow {
           display: none;
         }
@@ -131,10 +120,9 @@
           position: absolute;
           bottom: 0;
           left: 0;
-          overflow: hidden;
           z-index: 10;
           .name {
-            width:350px;
+            width: 350px;
             position: absolute;
             line-height: 84px;
             font-size: 45px;
@@ -142,21 +130,73 @@
             color: white;
             top: 40px;
             left: 60px;
-            z-index:100;
+            z-index: 100;
           }
-        }
-        .grey_overlay{
-          display: block;
-          background:grey;
-          width: 204px;
-          height: 165px;
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          z-index:10;
-        }
+        } // .grey_overlay{
+        //   display: block;
+        //   background:grey;
+        //   width: 204px;
+        //   height: 165px;
+        //   position: absolute;
+        //   bottom: 0;
+        //   left: 0;
+        // }
       }
     }
   }
 }
 
+
+  .container{
+    .left{
+      display: none;
+    }
+    .right{
+      width: 100%;
+      position: relative;
+      overflow: hidden;
+      .rooms_list{
+        left: 50%;
+        transform: translateX(-50%);
+        position: absolute;
+        top: 20px;
+        width: 550px;
+        display: flex;
+        color: #F2F2F2;
+        font-weight: 400;
+        font-size: 22px;
+        list-style: none;
+        justify-content: space-between;
+        z-index: 7;
+        li {
+          text-align: right;
+          margin-bottom: 20px;
+          cursor: pointer;
+          }
+        }
+        .room_box {
+          display: block;
+          background: rgba(0, 217, 145, 0.81);
+          width: 50px;
+          height: 40px;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          z-index: 10;
+          .name {
+            width: 350px;
+            position: absolute;
+            line-height: 84px;
+            font-size: 16px;
+            word-break: normal;
+            color: white;
+            top: -25px;
+            left: 6px;
+            z-index: 100;
+          }
+        }
+      .img_container_room{
+        position: relative;
+      }
+    }
+  }
