--- a/assets/scss/layout/_rooms.scss
+++ b/assets/scss/layout/_rooms.scss
@@ -146,7 +146,7 @@
   }
 }
 
-
+.rooms{
   .container{
     .left{
       display: none;
@@ -199,4 +199,5 @@
         position: relative;
       }
     }
+  }
   }
