commit before pull

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -13,7 +13,7 @@
 @import "/layout/cofunders";
 @import "/layout/rooms";
 @import "/layout/about";
-@import "/layout/footer";
+//@import "/layout/footer";
 @import "/layout/newsletter";
 
 
