--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -15,7 +15,7 @@ footer {
       display: flex;
       justify-content: space-between;
       color: #fff;
-      
+      text-decoration: none;
 
 
       li {
