--- a/assets/scss/layout/_form.scss
+++ b/assets/scss/layout/_form.scss
@@ -47,9 +47,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 0 auto;
-    margin-top: 50px;
-
+    margin: 50px auto 0;
 
     .form_contact {
       border: 1px solid;
@@ -60,8 +58,6 @@
       display: flex;
       justify-content: center;
       width: 400px;
-
-
 
       #first-group {
         display: grid;
@@ -76,7 +72,6 @@
 
       .form-group {
         margin: 0 auto;
-
       }
 
       h4 {
@@ -91,7 +86,6 @@
       .checkbox {
         width: 100%;
         margin-top: 20px;
-
 
         h4 {
           font-size: 11px;
@@ -109,13 +103,12 @@
           input[type="checkbox"] {
             height: 11px;
             border: none;
-
           }
 
           span {
             font-size: 10px;
             font-family: 'roboto';
-            color:#757575;
+            color: #757575;
             margin-right: 13px;
           }
 
@@ -132,7 +125,6 @@
 
     .send_msg {
       margin: 0 auto;
-
 
       textarea {
         border: none;
