--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -60,6 +60,12 @@
         max-width: 553px;
         margin-top: 30px;
       }
+      h3{
+        color:$title;
+        margin-left:40px;
+        margin-top:10px
+      }
+
       img {
         transform: rotate(0);
         margin-top: 50px;
