--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -8,12 +8,11 @@
 @import "/layout/event";
 @import "/layout/community";
 @import "/layout/communityPage";
-
 @import "/layout/co-founders";
 @import "/layout/cofunders";
 @import "/layout/rooms";
 @import "/layout/about";
-//@import "/layout/footer";
+@import "/layout/footer";
 @import "/layout/newsletter";
 
 
