--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -2,47 +2,41 @@ footer {
   min-width: 100%;
   height: 150px;
   bottom: 0;
-  background: $darkgrey;
   margin-top: 50px;
-
-
   .content {
     margin: 0 auto;
     width: 160px;
-
-
     ul {
       display: flex;
       justify-content: space-between;
       color: #fff;
       text-decoration: none;
-
-
       li {
         list-style: none;
         margin-top: 20px;
       }
       a{
-        color: #fff;
+        color: #4f4f4f;
         text-decoration: none;
       }
     }
     h2{
-      // font-family: $text-font;
       border: 2px solid $title;
       color: $title;
       font-family: $nav-font;
       font-size: $par-size;
       padding: 10px;
       text-align: center;
-      margin: 20px;
+      margin: 30px 15px;
+      cursor: pointer;
     }
     .copyright {
-      color: #fff;
+      color: #313131;
       text-align: center;
       font-family: $text-font;
       font-size: $small-txt-size;
       padding: 10px;
+      margin-bottom:30px;
     }
   }
 }
