--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -10,6 +10,7 @@
         padding: 5px 8px;
         border: 2px solid $title;
         color: $title;
+        cursor: pointer;
       }
     }
     img {
