--- a/assets/scss/layout/_rooms.scss
+++ b/assets/scss/layout/_rooms.scss
@@ -1,17 +1,21 @@
 @import "../modules/variables";
 @import "../base/base";
-
-.overlay {
-  background-color: rgba(0, 0, 0, 0.81);
+.overlay{
+  background-color:rgba(0, 0, 0, 0.81);
   z-index: 500;
   width: 100vw;
   height: 100vh;
   position: absolute;
 }
-
 .rooms {
   position: relative;
   font-family: $text-font;
+  .buttonContent{
+    position: absolute;
+    top:75%;
+    left: 15%;
+
+  }
   .subTitle {
     @extend .title;
     z-index: 5;
@@ -34,30 +38,22 @@
       object-fit: cover;
     }
   }
-  .paragraphe {
-    display: none;
-  }
-  .back {
-    position: absolute;
-    a {
-      text-decoration: none;
-      color: #4f4f4f;
-      z-index: 2;
-    }
-  }
-  .specs {
-    display: none;
-  }
 }
 
-@media (min-width: 992px) {
-  .buttonContent {
-    position: absolute;
-    top: 75%;
-    left: 15%;
-    .button {
-    }
+.paragraphe{
+  display:none;
+}
+.back{
+  position: absolute;
+  a{
+    text-decoration: none;
+    color: #4f4f4f;
+    z-index: 2;
   }
+}
+@media (min-width: 992px) {
+
+  //modals
 
   .rooms {
     .container {
@@ -80,8 +76,10 @@
             margin-top: 50px;
             line-height: $txt-lh;
             font-size: $text-font;
+            max-width: 360px;
+
             .float {
-              width: 100%;
+              min-width: 400px;
             }
           }
           .btn {
@@ -94,6 +92,7 @@
           }
         }
         .specs {
+
           width: 90%;
           height: 166px;
           position: absolute;
@@ -163,115 +162,130 @@
             left: 20px;
             z-index: 100;
           }
-        }
+        } // .grey_overlay{
+        //   display: block;
+        //   background:grey;
+        //   width: 204px;
+        //   height: 165px;
+        //   position: absolute;
+        //   bottom: 0;
+        //   left: 0;
+        // }
       }
     }
   }
 }
 
-.rooms {
-  .container {
-    .left {
-      .back {
-        position: absolute;
-        top: 0;
-      }
-      display: block;
-      width: 40%;
-      margin: 0 auto;
 
-      .description {
-        margin-left: 65px;
-        margin-top: 65px;
-        padding-right: 20px;
-        .subTitle {
-          width: 250px;
-        }
-        .paragraphe {
-          margin: 0 auto;
+.container{
+  .left {
+    .back{
+      /* font-family: "Roboto"; */
+      /* text-transform: uppercase; */
+      /* font-size: 18px; */
+      /* margin-bottom: 100px; */
+      /* display: flex; */
+      /* margin-left: 20px; */
+      position: absolute;
+      top: 0;
+    }
+    display: block;
+    width: 40%;
+    margin: 0 auto;
 
-        }
-        .btn {
-          margin-left: 75px;
-          margin-top: 42px;
-          border: 1px solid $title;
-          width: 100px;
-          color: $title;
-          padding: 10px;
-        }
+    .description {
+      margin-left: 65px;
+      margin-top: 65px;
+      padding-right: 20px;
+      .subTitle{
+        width: 250px;
       }
-      .specs {
-        width: 90%;
-        height: 166px;
-        position: relative;
-        bottom: 0;
-        background: $ligthgrey;
-        padding: 30px 30px 30px 65px;
+      .paragraphe {
         margin: 0 auto;
 
-        .content {
-          display: flex;
-          ul {
-            list-style: none;
-            li {
-              margin-bottom: 42px;
-            }
+      }
+      .btn {
+        margin-left: 75px;
+        margin-top: 42px;
+        border: 1px solid $title;
+        width: 100px;
+        color: $title;
+        padding: 10px;
+      }
+    }
+    .specs {
+      display: none;
+      width: 90%;
+      height: 166px;
+      position: relative;
+      bottom: 0;
+      background: $ligthgrey;
+      padding: 30px 30px 30px 65px;
+      margin: 0 auto;
+
+
+      .content {
+        display: flex;
+        ul {
+          list-style: none;
+          li {
+            margin-bottom: 42px;
           }
-          .values {
-            margin-left: 50px;
-            color: $title;
-            font-weight: 400;
-          }
+        }
+        .values {
+          margin-left: 50px;
+          color: $title;
+          font-weight: 400;
         }
       }
     }
-    .right {
-      width: 100%;
-      position: relative;
-      overflow: hidden;
-      .rooms_list {
-        left: 50%;
-        transform: translateX(-50%);
-        position: absolute;
+  }
+  .right{
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    .rooms_list{
+      left: 50%;
+      transform: translateX(-50%);
+      position: absolute;
 
-        width: 320px;
-        display: flex;
-        color: $title;
-        font-weight: 400;
-        font-size: 16px;
-        list-style: none;
-        justify-content: space-between;
-        z-index: 7;
-        li {
-          text-align: right;
-          margin-bottom: 20px;
-          cursor: pointer;
-        }
+      width: 320px;
+      display: flex;
+      color: $title;
+      font-weight: 400;
+      font-size: 16px;
+      list-style: none;
+      justify-content: space-between;
+      z-index: 7;
+      li {
+        text-align: right;
+        margin-bottom: 20px;
+        cursor: pointer;
       }
-      .room_box {
-        display: block;
-        background: rgba(0, 217, 145, 0.81);
-        width: 50px;
-        height: 40px;
+    }
+    .room_box {
+      display: block;
+      background: rgba(0, 217, 145, 0.81);
+      width: 50px;
+      height: 40px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: 10;
+      .name {
+        width: 350px;
         position: absolute;
-        bottom: 0;
-        left: 0;
-        z-index: 10;
-        .name {
-          width: 350px;
-          position: absolute;
-          line-height: 84px;
-          font-size: 16px;
-          word-break: normal;
-          color: white;
-          top: -25px;
-          left: 6px;
-          z-index: 100;
-        }
+        line-height: 84px;
+        font-size: 16px;
+        word-break: normal;
+        color: white;
+        top: -25px;
+        left: 6px;
+        z-index: 100;
       }
-      .img_container_room {
-        position: relative;
-      }
+    }
+    .img_container_room{
+      position: relative;
     }
   }
 }
